--- a/jwt-token-example/src/main/resources/application.yml
+++ b/jwt-token-example/src/main/resources/application.yml
@@ -1,6 +1,11 @@
 server:
-  port: 6000
+  port: 8080
 
 spring:
+  datasource:
+    url: jdbc:h2:mem:testdb
+  h2:
+    console:
+      enabled: true
   application:
     name: jwt-token-example
