security config authentication

--- a/jwt-token-example/src/main/resources/application.yml
+++ b/jwt-token-example/src/main/resources/application.yml
@@ -9,3 +9,9 @@ spring:
       enabled: true
   application:
     name: jwt-token-example
+
+
+jwt:
+  key:
+    private: classpath:app.key
+    public: classpath:app.pub
